# algoworld-workers

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  renovate.json  requirements.txt
.github/workflows/: build_logic_mainnet.yml  build_logic_testnet.yml  build_rewards_mainnet.yml  ci.yml  closeout_packs.yml  core_logic.yml  core_logic_mainnet.yml  core_logic_testnet.yml  create_packs.yml  depost_swap_fees_to_pool.yml  depost_swap_fees_to_pool_mainnet.yml  fetch_countries.yml  influence_deposits.yml  packs.yml
data/mainnet/: all_cities.json  all_countries.json  cities_db.json  countries_db.json
data/mainnet/aw_build/: database.json  metadata.json  processed_notes.json
data/mainnet/cities/: database.json
data/mainnet/countries/: database.json
data/mainnet/special/: database.json
data/testnet/: all_cities.json  countries_db.json  metadata.json  processed_notes.json
data/testnet/aw_build/: database.json  metadata.json  processed_notes.json
data/testnet/cities/: database.json
data/testnet/countries/: database.json
data/testnet/special/: database.json
src/: city_rewards_worker.py  closeout_city_packs.py  common.py  create_city_packs.py  deposit_awt_liquidity.py  fetch_aw_cities.py  fetch_aw_countries.py  models.py  process_awt_deposits.py  utils.py
src/aw_build/: fetch_tiles.py  process_build.py  process_rewards.py
src/awt/: fees_to_liquidity.py
src/cities/: fetch_all.py
src/cities/influence/: process_deposits.py
src/cities/packs/: closeout.py  create.py
src/countries/: fetch_all.py
src/data/: all_cities.json  cities_db.json  metadata.json  processed_notes.json
src/shared/: common.py  models.py  notifications.py  utils.py
src/special/: fetch_all.py
tests/: test_models.py
tests/aw_build/: test_fetch_tiles.py
tests/awt/: test_fees_to_liquidity.py
tests/cities/: test_fetch_all.py
tests/cities/packs/: test_create.py
tests/countries/: test.json  test_fetch_all.py
tests/shared/: test_notifications.py
tests/special/: test_fetch_all.py
(+10 files in other folders)
