[tool.poetry]
name = "algoworld-workers"
version = "0.1.0"
description = "A set of cron jobs for processes that keep the algoworld ecosystem running"
authors = ["MillionAlgosFather <info@algoworld.io>"]

[tool.poetry.dependencies]
python = "^3.9"
py-algorand-sdk = "1.13.1"
tinyman-py-sdk = {git = "https://github.com/algoworldnft/tinyman-py-sdk.git", rev = "main"}
algoworld-contracts = {git = "https://github.com/algoworldnft/algoworld-contracts", rev = "1.3.0"}
requests = "^2.28.1"
retry = "^0.9.2"


[tool.poetry.dev-dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pytest-mock = "^3.8.2"
pytest-cov = "^3.0.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
